@@ -40,8 +40,18 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 	if (USE_JSON_EMBEDDING)
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} /DUSE_JSON_EMBEDDING=1")
 	endif()
+else()
+    message(WARNING "${PROJECT_NAME} does NOT support your compiler. You might get some problems.")
 endif()
 
+# check OS
+if (NOT ((${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+		OR (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+		OR (${CMAKE_SYSTEM_NAME} MATCHES "Linux")))
+	message(WARNING "${PROJECT_NAME} does NOT support your OS. You might get some problems.")
+endif()
+
+# Show settings
 message(VERBOSE "SYSTEM                  : ${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_VERSION}")
 message(VERBOSE "COMPILER                : ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
 message(VERBOSE "CXX_FLAGS               : ${CMAKE_CXX_FLAGS}")
