@@ -1,4 +1,6 @@
 ver 0.4.1
+- Raise errors when the command requires more components or there are unused components.
+- Fixed a bug that "%%" won't escsape the "%" symbol.
 - Fixed a bug that the window is resizable on macOS and Linux.
 - Refined codes.
 
